[build-system]
requires = ["flit-core >= 3.8"]
build-backend = "flit_core.buildapi"

[project]
name = "later"
dynamic = ["version", "description"]
readme = "README.rst"
authors = [
    {name="Meta Platforms, Inc"},
    {name="Jason Fried", email="fried@meta.com"},
]
license = {file="LICENSE"}
keywords = ["asyncio", "later"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]

requires-python = ">=3.10"
dependencies = [
    "async-timeout >= 2.0.0, <= 5.0.1",
]

[project.optional-dependencies]
dev = [
    "async-timeout==5.0.1",
    "coverage==7.10.5",
    "flit==3.12.0",
]

[project.urls]
Github = "https://github.com/facebookincubator/later"
